<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_mySubjects"
            android:icon="@drawable/ic_book"
            android:title="@string/my_subjects" />
        <item
            android:id="@+id/nav_myClassmates"
            android:icon="@drawable/ic_classroom"
            android:title="@string/my_classmates" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_user"
            android:title="@string/find_student_or_faculty" />
    </group>
</menu>