<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.harshjais369.kitplus.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_mySubjects"
        android:name="com.harshjais369.kitplus.ui.my_subjects.MySubjectsFragment"
        android:label="@string/my_subjects"
        tools:layout="@layout/fragment_my_subjects" />

    <fragment
        android:id="@+id/nav_myClassmates"
        android:name="com.harshjais369.kitplus.ui.my_classmates.MyClassmatesFragment"
        android:label="@string/my_classmates"
        tools:layout="@layout/fragment_my_classmates" />
</navigation>